# bonner-computation

./: .gitignore  pyproject.toml  setup.py
bonner/computation/: __init__.py  asg_mu_nmf.py  cca.py  corrcoef.py  pca.py  regression.py  statistics.py  z_score.py
bonner/tests/: test_cca.py
